--- a/index.html
+++ b/index.html
@@ -23,6 +23,47 @@
                 <p>Drinks</p>
             </div>
         </div>
+        <div class="menu">
+            <button aria-expanded="false" aria-controls="menu-list">
+                <span class="open">-</span>
+                <span class="close">x</span>
+                Menu
+            </button>
+            <ul id="menu-list">
+                <li>
+                    <a href="#">Snacks</a>
+                </li>
+                <li>
+                    <a href="#">Drinks</a>
+                </li>
+                <li>
+                    <a href="#">Desserts</a>
+                </li>
+                <li>
+                    <a href="#">Reservations</a>
+                </li>
+            </ul>
+        </div>
+        <div class="features">
+            <div class="feature">
+                <span class="icon">🍑</span>
+                    <h3>Snacks</h3>
+                    <p>Mina olen nomnom.</p>
+            </div>
+            <div class="feature">
+                <span class="icon">🥃</span>
+                    <h3>Drinks</h3>
+                    <p>Mina joon jooki.</p>
+            </div>
+            <div class="feature">
+                <span class="icon">🎻</span>
+                    <h3>Music</h3>
+                    <p>Mina olen pepeJam.</p>
+            </div>
+        </div>
+        <div class="about">
+            <img src="" alt="">
+        </div>
     </div>
 </body>
 </html>
