--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </div>
         <div class="menu">
             <button aria-expanded="false" aria-controls="menu-list">
-                <span class="open">-</span>
-                <span class="close">x</span>
+                <span class="open">☰</span>
+                <span class="close">✕</span>
                 Menu
             </button>
             <ul id="menu-list">
